// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`basic > parse 1`] = `
{
  "children": [
    {
      "arguments": [
        {
          "offset": 9,
          "type": "number",
          "value": "0xA00000",
        },
      ],
      "name": {
        "offset": 1,
        "type": "identifier",
        "value": "dynamic",
      },
      "offset": 0,
      "type": "macro",
    },
    {
      "arguments": [
        {
          "name": {
            "offset": 25,
            "type": "identifier",
            "value": "1",
          },
          "offset": 24,
          "type": "dynamic",
        },
      ],
      "name": {
        "offset": 20,
        "type": "identifier",
        "value": "org",
      },
      "offset": 19,
      "type": "macro",
    },
    {
      "arguments": [
        {
          "name": {
            "offset": 35,
            "type": "identifier",
            "value": "2",
          },
          "offset": 34,
          "type": "dynamic",
        },
        {
          "offset": 37,
          "type": "identifier",
          "value": "MSG_FACE",
        },
      ],
      "name": {
        "offset": 27,
        "type": "identifier",
        "value": "msgbox",
      },
      "offset": 27,
      "type": "command",
    },
    {
      "arguments": [],
      "name": {
        "offset": 46,
        "type": "identifier",
        "value": "end",
      },
      "offset": 46,
      "type": "command",
    },
    {
      "arguments": [
        {
          "name": {
            "offset": 57,
            "type": "identifier",
            "value": "2",
          },
          "offset": 56,
          "type": "dynamic",
        },
      ],
      "name": {
        "offset": 52,
        "type": "identifier",
        "value": "org",
      },
      "offset": 51,
      "type": "macro",
    },
    {
      "arguments": [
        {
          "offset": 61,
          "type": "string",
          "value": ""你自己魔怔吧，我要去二次元了。"",
        },
      ],
      "name": {
        "offset": 59,
        "type": "identifier",
        "value": "=",
      },
      "offset": 59,
      "type": "macro",
    },
  ],
  "offset": 0,
  "type": "root",
}
`;

exports[`basic > tokenize 1`] = `
[
  {
    "offset": 0,
    "type": "hash",
    "value": "#",
  },
  {
    "offset": 1,
    "type": "identifier",
    "value": "dynamic",
  },
  {
    "offset": 9,
    "type": "number",
    "value": "0xA00000",
  },
  {
    "offset": 19,
    "type": "hash",
    "value": "#",
  },
  {
    "offset": 20,
    "type": "identifier",
    "value": "org",
  },
  {
    "offset": 24,
    "type": "at",
    "value": "@",
  },
  {
    "offset": 25,
    "type": "number",
    "value": "1",
  },
  {
    "offset": 27,
    "type": "identifier",
    "value": "msgbox",
  },
  {
    "offset": 34,
    "type": "at",
    "value": "@",
  },
  {
    "offset": 35,
    "type": "number",
    "value": "2",
  },
  {
    "offset": 37,
    "type": "identifier",
    "value": "MSG_FACE",
  },
  {
    "offset": 46,
    "type": "identifier",
    "value": "end",
  },
  {
    "offset": 51,
    "type": "hash",
    "value": "#",
  },
  {
    "offset": 52,
    "type": "identifier",
    "value": "org",
  },
  {
    "offset": 56,
    "type": "at",
    "value": "@",
  },
  {
    "offset": 57,
    "type": "number",
    "value": "2",
  },
  {
    "offset": 59,
    "type": "equal",
    "value": "=",
  },
  {
    "offset": 61,
    "type": "string",
    "value": ""你自己魔怔吧，我要去二次元了。"",
  },
]
`;
